FakeClock not found 수정😇

--- a/demo/content/여기를/mdx.mdx
+++ b/demo/content/여기를/mdx.mdx
@@ -25,13 +25,13 @@ demo/examples
 In your `.mdx` file:
 
 ```tsx
-import FakeClock from "./mdx-components/FakeClock.tsx"
+import FakeClock from "./바꿔도되나/FakeClock.tsx"
 
 <FakeClock />
 ```
 
 The result:
 
-import FakeClock from "./mdx-components/FakeClock.tsx"
+import FakeClock from "./바꿔도되나/FakeClock.tsx"
 
 <FakeClock />
